# openrailsrs

./: .gitignore  CALIBRATION.md  Cargo.toml  README.md  ROADMAP.md  check.sh
crates/openrailsrs-ace/: Cargo.toml
crates/openrailsrs-ace/src/: lib.rs
crates/openrailsrs-ace/tests/: decode.rs
crates/openrailsrs-ace/tests/fixtures/: dxt1_4x4.ace
crates/openrailsrs-bevy-scenery/: Cargo.toml
crates/openrailsrs-bevy-scenery/assets/msts/: test.ace  test.routecat
crates/openrailsrs-bevy-scenery/src/: atmosphere.rs  catalog.rs  gpu.rs  lib.rs  lighting.rs  load_diagnostics.rs  stream.rs  test_harness.rs  textures.rs
crates/openrailsrs-campaign/: Cargo.toml
crates/openrailsrs-campaign/src/: error.rs  lib.rs  model.rs
crates/openrailsrs-campaign/tests/: campaign_load.rs
crates/openrailsrs-cli/: Cargo.toml
crates/openrailsrs-cli/src/: audio.rs  cab.rs  dispatch.rs  lib.rs  main.rs  sound_regions.rs
crates/openrailsrs-cli/tests/: asset_subcommands.rs  chiltern_brake_coast.rs  chiltern_brake_coast_multi_body.rs  chiltern_cruise_audit.rs  chiltern_cruise_phase_audit.rs  chiltern_dmbsh_phase.rs  chiltern_fullthrottle.rs  chiltern_fullthrottle_audit.rs  chiltern_fullthrottle_multi_body.rs  chiltern_multi_body.rs  chiltern_startup_audit.rs  chiltern_startup_brake_phase.rs  chiltern_startup_diesel_audit.rs  chiltern_startup_overshoot.rs  chiltern_startup_phase_audit.rs  chiltern_throttle50.rs  chiltern_throttle75.rs  chiltern_validate.rs  compare_or.rs  sce_multi_body.rs  sce_or_p1_cruise.rs  sce_validate.rs  sound_regions.rs
crates/openrailsrs-export/: Cargo.toml
crates/openrailsrs-export/src/: ascii_map.rs  dot.rs  error.rs  geojson.rs  lib.rs  replay.rs
crates/openrailsrs-export/tests/: exports.rs
crates/openrailsrs-formats/: Cargo.toml
crates/openrailsrs-formats/src/: ast.rs  cab_link.rs  dispatch.rs  encoding.rs  error.rs  lexer.rs  lib.rs  msts_file_text.rs  msts_simisa.rs  msts_tile_name.rs  msts_units.rs  parser.rs  shape_binary.rs  shape_binary_direct.rs  shape_binary_reader.rs  tile_paths.rs  units.rs  vehicle_audit.rs  vehicle_field_catalog.rs
crates/openrailsrs-formats/tests/: cvf.rs  encoding.rs  parse_fixtures.rs  qdir_smoke.rs  shapes_world.rs  typed_adapters.rs
crates/openrailsrs-game/: Cargo.toml
crates/openrailsrs-game/src/: error.rs  evaluate.rs  lib.rs
crates/openrailsrs-game/tests/: scoring.rs  smoke_play.rs
crates/openrailsrs-import/: Cargo.toml
crates/openrailsrs-import/src/: error.rs  geo.rs  lib.rs  osm.rs
crates/openrailsrs-import/tests/: osm_import.rs
crates/openrailsrs-msts/: Cargo.toml
crates/openrailsrs-msts/src/: error.rs  import_activity.rs  import_route.rs  lib.rs  path_placement.rs
crates/openrailsrs-msts/tests/: import_msts.rs
crates/openrailsrs-or-shader/: Cargo.toml
crates/openrailsrs-or-shader/src/: coordinates.rs  lib.rs  shader.rs  standard_pbr.rs
crates/openrailsrs-render3d/: Cargo.toml
crates/openrailsrs-render3d/docs/: OR_VSM.md
crates/openrailsrs-render3d/src/: activity.rs  consist.rs  coords.rs  dds_header.rs  debug_hud.rs  dyntrack.rs  lib.rs  lighting.rs  loading.rs  main.rs  objects.rs  or_cascade.rs  or_scenery_material.rs  or_shader.rs  or_terrain_material.rs  or_vsm.rs  or_vsm_debug.rs  or_vsm_moments.rs  or_vsm_render.rs  player_spawn.rs  runtime.rs  scenery.rs  shape_descriptor.rs  shapes.rs  sky.rs  stream.rs  tdb_track.rs  terrain.rs  textures.rs  tile_bundle.rs  tile_parse.rs  track.rs  transfer.rs  world_spawn.rs
crates/openrailsrs-route/: Cargo.toml
crates/openrailsrs-route/src/: error.rs  lib.rs  load.rs  path.rs
crates/openrailsrs-route/tests/: load_invalid.rs
crates/openrailsrs-scenarios/: Cargo.toml
crates/openrailsrs-scenarios/src/: error.rs  lib.rs  model.rs  overlay.rs  sound_regions.rs  timetable.rs
crates/openrailsrs-scenarios/tests/: load_smoke.rs  timetable_load.rs
crates/openrailsrs-sim/: Cargo.toml
crates/openrailsrs-sim/benches/: sim_step.rs
crates/openrailsrs-sim/src/: brake.rs  coupler.rs  csv_out.rs  error.rs  exterior.rs  lib.rs  live_drive.rs  multi_runner.rs  path.rs  path_data.rs  physics.rs  runner.rs  scripted_driver.rs  state.rs  steam.rs
crates/openrailsrs-sim/src/etcs/: braking.rs  (+4 more)
crates/openrailsrs-sim/tests/: brake_propagation.rs  chiltern_path_debug.rs  coupler_forces.rs  diesel_multi.rs  freeroll_davis.rs  multi_body_davis.rs  multi_body_integration.rs  multi_train.rs  pat_route_edges.rs  physics_headless.rs  run_smoke_example.rs  scripted_driver.rs  signal_enforcement.rs  steam_physics.rs  switch_pathfinding.rs  timetable_run.rs
crates/openrailsrs-track/: Cargo.toml
crates/openrailsrs-track/src/: error.rs  graph.rs  lib.rs  signal.rs
crates/openrailsrs-track/tests/: graph.rs  signal_script.rs
crates/openrailsrs-train/: Cargo.toml
crates/openrailsrs-train/src/: auto_friction.rs  davis_est.rs  diesel.rs  error.rs  from_ast.rs  lib.rs  model.rs  steam_loader.rs
crates/openrailsrs-train/tests/: audit_chiltern_forces.rs  audit_sce_cruise.rs  auto_friction_golden.rs  auto_friction_sce.rs  consist.rs  golden_assets.rs  or_p1_diesel_eng.rs
crates/openrailsrs-validate/: Cargo.toml
crates/openrailsrs-validate/src/: brake.rs  compare.rs  error.rs  lib.rs  trace.rs
crates/openrailsrs-validate/tests/: compare.rs  or_trace.rs
crates/openrailsrs-viewer/: Cargo.toml
crates/openrailsrs-viewer/src/: main.rs
crates/openrailsrs-viewer3d/: Cargo.toml
crates/openrailsrs-viewer3d/src/: app_floating.rs  app_gameplay.rs  app_live.rs  app_smoke.rs  app_spawn.rs  cab_cvf.rs  cab_cvf_overlay.rs  cab_diag.rs  cab_native_instruments.rs  cab_panel.rs  cab_render.rs  cab_screen.rs  cab_view.rs  camera.rs  capture.rs  coordinates.rs  dyntrack.rs  floating_origin.rs  forest.rs  gameplay.rs  hud.rs  launch.rs  lib.rs  live.rs  log.rs  main.rs  or_cab_material.rs  or_shader.rs  overhead_wire.rs  overspeed_flash.rs  placement_audit.rs  precipitation.rs  road_cars.rs  rolling_stock.rs  rolling_stock_anim.rs  route_bootstrap.rs  scene.rs  scenery_audit.rs  shapes.rs  signal_lamps.rs  (+29 more)
crates/openrailsrs-viewer3d/tests/: terrain_anchor_height.rs
(+333 files in other folders)
