[workspace]
resolver = "2"
members = [
    "crates/openrailsrs-core",
    "crates/openrailsrs-formats",
    "crates/openrailsrs-campaign",
    "crates/openrailsrs-import",
    "crates/openrailsrs-scenarios",
    "crates/openrailsrs-route",
    "crates/openrailsrs-track",
    "crates/openrailsrs-train",
    "crates/openrailsrs-sim",
    "crates/openrailsrs-game",
    "crates/openrailsrs-validate",
    "crates/openrailsrs-export",
    "crates/openrailsrs-msts",
    "crates/openrailsrs-cli",
    "crates/openrailsrs-viewer",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
toml = "1.1"
csv = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.10"
indexmap = "2.7"
