[package]
name = "openrailsrs-campaign"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Campaign system: missions, progress persistence and unlock logic"

[dependencies]
anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
