[package]
name = "openrailsrs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Command-line interface for openrailsrs"

[[bin]]
name = "openrailsrs"
path = "src/main.rs"

[dependencies]
openrailsrs-export = { path = "../openrailsrs-export" }
openrailsrs-formats = { path = "../openrailsrs-formats" }
openrailsrs-campaign = { path = "../openrailsrs-campaign" }
openrailsrs-import = { path = "../openrailsrs-import" }
openrailsrs-game = { path = "../openrailsrs-game" }
openrailsrs-route = { path = "../openrailsrs-route" }
openrailsrs-scenarios = { path = "../openrailsrs-scenarios" }
openrailsrs-track = { path = "../openrailsrs-track" }
openrailsrs-train = { path = "../openrailsrs-train" }
openrailsrs-sim = { path = "../openrailsrs-sim" }
openrailsrs-msts = { path = "../openrailsrs-msts" }
openrailsrs-validate = { path = "../openrailsrs-validate" }
anyhow.workspace = true
clap.workspace = true
rayon.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
crossterm = "0.29.0"
ratatui = "0.30.0"
rodio = "0.21.1"
