[package]
name = "openrailsrs-formats"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MSTS/Open Rails–style text formats (S-expression AST)"

[dependencies]
openrailsrs-core = { path = "../openrailsrs-core" }
thiserror.workspace = true

[dev-dependencies]
pretty_assertions = "1.4"
