[package]
name = "openrailsrs-formats"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MSTS/Open Rails–style text formats (S-expression AST)"

[dependencies]
openrailsrs-core = { path = "../openrailsrs-core" }
thiserror.workspace = true
encoding_rs = "0.8"
flate2 = "1.1"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3"
