[package]
name = "openrailsrs-import"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Import real-world railway topology from OpenStreetMap (Overpass JSON) into track.toml"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
openrailsrs-route = { path = "../openrailsrs-route" }
openrailsrs-track = { path = "../openrailsrs-track" }
