[package]
name = "openrailsrs-render3d"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Render 3D nuevo desde cero (Bevy) — una capa a la vez, validado contra Open Rails. Empieza por el terreno."

[[bin]]
name = "openrailsrs-render3d"
path = "src/main.rs"

[dependencies]
openrailsrs-formats = { path = "../openrailsrs-formats" }
openrailsrs-ace = { version = "0.1.0", path = "../openrailsrs-ace" }
openrailsrs-route = { path = "../openrailsrs-route" }
openrailsrs-track = { path = "../openrailsrs-track" }
anyhow.workspace = true
clap = { workspace = true }
bevy = { version = "0.18", default-features = false, features = [
    "bevy_winit",
    "x11",
    "bevy_window",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_asset",
    "bevy_log",
    "bevy_ui",
    "bevy_text",
    "dds",
    "default_font",
    "bevy_state",
    "tonemapping_luts",
    "multi_threaded",
    "zstd_rust",
] }
image = "0.25"
