[package]
name = "openrailsrs-render3d"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Render 3D nuevo desde cero (Bevy) — una capa a la vez, validado contra Open Rails. Empieza por el terreno."

[lib]
path = "src/lib.rs"

[[bin]]
name = "openrailsrs-render3d"
path = "src/main.rs"

[dependencies]
openrailsrs-bevy-scenery = { path = "../openrailsrs-bevy-scenery" }
openrailsrs-or-shader = { path = "../openrailsrs-or-shader" }
openrailsrs-formats = { path = "../openrailsrs-formats" }
openrailsrs-ace = { version = "0.1.0", path = "../openrailsrs-ace" }
openrailsrs-route = { path = "../openrailsrs-route" }
openrailsrs-track = { path = "../openrailsrs-track" }
openrailsrs-train = { path = "../openrailsrs-train" }
anyhow.workspace = true
clap = { workspace = true }
bevy = { workspace = true, features = ["bevy_text", "bevy_state", "multi_threaded"] }
image.workspace = true
bytemuck.workspace = true
