[package]
name = "openrailsrs-scenarios"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Playable scenario definitions (TOML)"

[dependencies]
openrailsrs-core = { path = "../openrailsrs-core" }
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
