[package]
name = "openrailsrs-track"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Track graph, switches, speed limits, basic signals"

[dependencies]
openrailsrs-core = { path = "../openrailsrs-core" }
indexmap.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
