[package]
name = "openrailsrs-viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Minimal 2D route viewer (optional; sim stays headless)"

[[bin]]
name = "openrailsrs-viewer"
path = "src/main.rs"

[dependencies]
minifb = { version = "0.28", default-features = false, features = ["x11"] }
openrailsrs-route = { path = "../openrailsrs-route" }
openrailsrs-track = { path = "../openrailsrs-track" }
