[package]
name = "openrailsrs-viewer3d"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Experimental 3D viewer (Bevy) — track graph from track.toml + free camera"

[lib]
path = "src/lib.rs"

[[bin]]
name = "openrailsrs-viewer3d"
path = "src/main.rs"

[features]
default = []
trace = ["bevy/trace"]

[dependencies]
openrailsrs-ace = { path = "../openrailsrs-ace" }
openrailsrs-formats = { path = "../openrailsrs-formats" }
openrailsrs-route = { path = "../openrailsrs-route" }
openrailsrs-scenarios = { path = "../openrailsrs-scenarios" }
openrailsrs-track = { path = "../openrailsrs-track" }
openrailsrs-train = { path = "../openrailsrs-train" }
openrailsrs-sim = { path = "../openrailsrs-sim" }
openrailsrs-audio = { path = "../openrailsrs-audio" }
csv = "1.3"
serde = { workspace = true }
toml = { workspace = true }
bevy = { version = "0.18", default-features = false, features = [
    "bevy_winit",
    "x11",
    "bevy_window",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_asset",
    "bevy_gizmos",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_log",
    "default_font",
    "tonemapping_luts",
    "zstd_rust",
] }

[dev-dependencies]
openrailsrs-core = { path = "../openrailsrs-core" }
