[package]
name = "openrailsrs-viewer3d"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Experimental 3D viewer (Bevy) — track graph from track.toml + free camera"

[lib]
path = "src/lib.rs"

[[bin]]
name = "openrailsrs-viewer3d"
path = "src/main.rs"

[features]
default = []
trace = ["bevy/trace"]

[dependencies]
openrailsrs-bevy-scenery = { path = "../openrailsrs-bevy-scenery" }
openrailsrs-or-shader = { path = "../openrailsrs-or-shader" }
openrailsrs-ace = { path = "../openrailsrs-ace" }
openrailsrs-formats = { path = "../openrailsrs-formats" }
openrailsrs-route = { path = "../openrailsrs-route" }
openrailsrs-scenarios = { path = "../openrailsrs-scenarios" }
openrailsrs-track = { path = "../openrailsrs-track" }
openrailsrs-train = { path = "../openrailsrs-train" }
openrailsrs-sim = { path = "../openrailsrs-sim" }
openrailsrs-audio = { path = "../openrailsrs-audio" }
csv = "1.3"
rayon.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
bevy = { workspace = true, features = ["bevy_gizmos", "bevy_ui_render"] }
image.workspace = true

[dev-dependencies]
openrailsrs-core = { path = "../openrailsrs-core" }
tempfile = "3"
